--- a/new-game/package.json
+++ b/new-game/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1"
   },
@@ -13,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-     "dev": "react-scripts start"
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
